# dependently-typed-slides

./: .gitignore  LICENSE  LambdaZagreb.cabal  README.md  index.html  stack.yaml
src/: CheatSheet.idr  Demo.hs  Demo.idr  NatTypeOperators.hs  PromotedTypes.hs  SimpleLang.idr  SingletonsSample.hs  TypedLambdaEvaluator.idr
