name:                LambdaZagreb
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            -
license:             BSD3
-- license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  -- exposed-modules:
  build-depends:       base, text, singletons
  default-language:    Haskell2010
